--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="#services" style="--i:3">Skill</a>
             <a href="#skills" style="--i:4">Portfolio</a>
             <a href="#contact" style="--i:5">Contact</a>
+            <a href="./sign-in-signup.html" style="--i:5">Login</a>
         </nav>
     </header>
     <section class="home" id="home">
