--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <a href="#" class="btn-box">More About me</a>
         </div>
-        <img src="Image.jpg" class="my" alt="My Photo">
+        <img src="Images/44.jpg" class="my" alt="My Photo">
     </section>
     <section class="about" id="about">
         <div class="about-img">
